Fix font issues in card view on small screens

--- a/client/staff/directives/card-view.less
+++ b/client/staff/directives/card-view.less
@@ -24,3 +24,14 @@
 
     }
 }
+
+@media (min-width: 1px) and (max-width: @screen-sm-max) {
+
+    .card-view {
+        .card-item {
+            h4 {
+                font-size: 15px;
+            }
+        }
+    }
+}
